# haligen

./: .gitignore  README.md  pyproject.toml
haligen/: __init__.py  alire.py  generator.py  os_utils.py  svd2ada.py
tests/: test_haligen.py
